<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/wpisz_dane_nowego_produktu"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/nazwa_produktu"/>
        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/Tekst1"
            android:autofillHints=""
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/masa_netto_produktu1"/>
        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/Tekst6"
            android:autofillHints=""
            android:inputType="text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g4"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/podaj_zawartosc_w_100_gramach_produktu"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/kalorycznosc"/>
        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/Tekst2"
            android:inputType="text"
            android:autofillHints="" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kcal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/bialko1"/>
        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/Tekst3"
            android:inputType="text"
            android:autofillHints="" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/weglowodany1"/>
        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/Tekst4"
            android:autofillHints=""
            android:inputType="text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/tluszcze1"/>
        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/Tekst5"
            android:autofillHints=""
            android:inputType="text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g3"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:id="@+id/btnDodajNowy"
        android:text="@string/dodaj_nowy_produkt1"/>

</LinearLayout>