<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btnZdjeciePrzycisk"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/zrob_zdjecie"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btnWybierzZdjecie"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/wybierz_zdjecie"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/wyszukiwarka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_szukaj"
            android:hint="@string/wyszukaj_w_bazie"
            android:inputType="text" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/widokListy"/>

    </LinearLayout>

</LinearLayout>